syntax = "proto3";

option csharp_namespace = "Mes.GrpcService";
import "sys.proto";

package grpcservice;

// The greeting service definition.
service ProductDataService {
  // Sends a greeting
  rpc GetProduct  (GrpcRequest) returns (GrpcReply); 
  rpc GetProductByRequest  (GetProductByRequestRequest) returns (GetProductByRequestReply); 

}
  
 // The request message containing the user's name.
message GetProductByRequestRequest {
  string code = 1;
  string id = 2;
  string org_id=3;
}

// The response message containing the greetings.
message GetProductByRequestReply {  
	string code=1;
	string name=2;
	string org_id=3;
	int32 product_type=4;
}